Closed Bug 782549 Opened 12 years ago Closed 12 years ago

Intermittent test_bug742376.html | Must have the same listeners at this point - got [0 or 2], expected [2 or 3]

Categories

(Core :: DOM: Device Interfaces, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla19
Tracking Status
firefox18 --- fixed
firefox19 --- fixed

People

(Reporter: philor, Assigned: Mook)

References

Details

(Keywords: intermittent-failure)

Attachments

(1 file)

https://tbpl.mozilla.org/php/getParsedLog.php?id=14361998&tree=Mozilla-Inbound Rev4 MacOSX Snow Leopard 10.6 mozilla-inbound debug test mochitests-1/5 on 2012-08-13 23:00:19 PDT for push 9e7c04aff0e6 slave: talos-r4-snow-011 62725 INFO TEST-START | /tests/content/events/test/test_bug742376.html ++DOMWINDOW == 51 (0x14ff68860) [serial = 1640] [outer = 0x128405920] --DOMWINDOW == 50 (0x14d1808c0) [serial = 1639] [outer = 0x128405920] [url = http://mochi.test:8888/tests/content/events/test/test_bug741666.html] --DOMWINDOW == 49 (0x1501e1c50) [serial = 1638] [outer = 0x128405920] [url = http://mochi.test:8888/tests/content/events/test/test_bug716822.html] --DOMWINDOW == 48 (0x1519704d0) [serial = 1635] [outer = 0x128405920] [url = http://mochi.test:8888/tests/content/events/test/test_bug667919-2.html] --DOMWINDOW == 47 (0x1481f5910) [serial = 1634] [outer = 0x128405920] [url = http://mochi.test:8888/tests/content/events/test/test_bug667919-1.html] --DOMWINDOW == 46 (0x138eae450) [serial = 1633] [outer = 0x128405920] [url = http://mochi.test:8888/tests/content/events/test/test_bug667612.html] --DOMWINDOW == 45 (0x15290b580) [serial = 1629] [outer = 0x151e45130] [url = about:blank] --DOMWINDOW == 44 (0x15197f230) [serial = 1628] [outer = 0x14db83130] [url = about:blank] --DOMWINDOW == 43 (0x14db831b0) [serial = 1623] [outer = 0x0] [url = about:blank] --DOMWINDOW == 42 (0x14cda73a0) [serial = 1627] [outer = 0x14db80440] [url = about:blank] --DOMWINDOW == 41 (0x14db804c0) [serial = 1622] [outer = 0x0] [url = about:blank] --DOMWINDOW == 40 (0x14be6e160) [serial = 1626] [outer = 0x14db40910] [url = about:blank] --DOMWINDOW == 39 (0x14db40990) [serial = 1621] [outer = 0x0] [url = about:blank] --DOMWINDOW == 38 (0x151e6d290) [serial = 1625] [outer = 0x151e45130] [url = about:blank] --DOMWINDOW == 37 (0x1481d0100) [serial = 1618] [outer = 0x128405920] [url = http://mochi.test:8888/tests/content/events/test/test_bug659071.html] --DOCSHELL 0x14db82590 == 12 [id = 281] --DOCSHELL 0x14db7f8c0 == 11 [id = 280] --DOCSHELL 0x14db3fc50 == 10 [id = 279] --DOCSHELL 0x151e44470 == 9 [id = 282] 62726 ERROR TEST-UNEXPECTED-FAIL | /tests/content/events/test/test_bug742376.html | Must have the same listeners at this point - got 0, expected 2 --DOCSHELL 0x14bc45c50 == 8 [id = 278] 62727 INFO TEST-END | /tests/content/events/test/test_bug742376.html | finished in 1339ms
Blocks: 759989
Summary: Intermittent test_bug742376.html | Must have the same listeners at this point - got 0, expected 2 → Intermittent test_bug742376.html | Must have the same listeners at this point - got 0, expected 2 (or got 2, expected 3)
OS: Mac OS X → All
Hardware: x86 → All
Summary: Intermittent test_bug742376.html | Must have the same listeners at this point - got 0, expected 2 (or got 2, expected 3) → Intermittent test_bug742376.html | Must have the same listeners at this point - got [0 or 2], expected [2 or 3]
Instead of checking the number of all orientations listeners that exist, check if the given window has orientation listeners turned on. The intermittent orange exists because other tests in the directory also attach orientation listeners, and it's undefined when they will be removed (i.e. when the windows get GCed). If they happen to go away during the test, this test fails. This intermittent orange can be turned permanent via: diff --git a/content/events/test/test_bug742376.html b/content/events/test/test_bug742376.html --- a/content/events/test/test_bug742376.html +++ b/content/events/test/test_bug742376.html @@ -26,6 +26,8 @@ function getListenerCount() { } var startListenerCount = getListenerCount(); +SpecialPowers.forceCC(); +is(getListenerCount(), startListenerCount, "got different listener count post-CC"); If you prefer not having an API change, just doing a forceCC before fetching the listener count should work too... but I figured the existing API is useless due to this problem anyway :) (I'm looking at this as sort of a payment for philor and RyanVM starring my random-oranges... thanks!)
Attachment #673737 - Flags: review?(doug.turner)
Attachment #673737 - Flags: review?(doug.turner) → review+
Assignee: nobody → mook.moz+mozbz
Status: NEW → RESOLVED
Closed: 12 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
Can we request Aurora uplift for this please?
Comment on attachment 673737 [details] [diff] [review] Check if the window has listeners, instead of if any listeners exist [Approval Request Comment] Bug caused by (feature/regressing bug #): bug 759989 User impact if declined: None; this is purely to clear up a frequent test failure (about once a day before fix). Testing completed (on m-c, etc.): Landed on m-c. Risk to taking this patch (and alternatives if risky): Low; changed code is for test support and has no other callers. It should be possible to reduce the likelihood of test failures by changing the test instead of changing code. Alternatively, the test may be disabled on branch (with normal risks associated with that). String or UUID changes made by this patch: One UUID change (nsIDeviceSensors).
Attachment #673737 - Flags: approval-mozilla-aurora?
Attachment #673737 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Whiteboard: [orange]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: