bug 782549 - check if the window has device sensor listeners, instead of global listener count (r=dougt)